--- a/templates/base.html
+++ b/templates/base.html
@@ -6,35 +6,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
 
     <title>Showcase</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
-            aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="{% url 'index' %}">Showcase</a>
-
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'index' %}">Home<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+    <nav>
+        <div class="nav-wrapper blue-grey darken-3">
+            <div class="container">
+                <a href="{% url 'index' %}" class="brand-logo green-text accent-4-text">SHOWCASE</a>
+                <a href="#" class="sidenav-trigger" data-target="slide-out">
+                    <i class="material-icons">menu</i>
+                </a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li>
+                        <a class="waves-effect waves-light btn black green-text accent-4-text z-depth-5"
+                            href="{% url 'index' %}">
+                            Home
+                        </a>
+                    </li>
+                    <li>
+                        <a class="waves-effect waves-light btn black green-text accent-4-text z-depth-5"
+                            href="{% url 'search_movies' %}">
+                            Movies
+                        </a>
+                    </li>
+                    <li>
+                        <a class="waves-effect waves-light btn black green-text accent-4-text z-depth-5"
+                            href="{% url 'search_tv' %}">
+                            TV Shows
+                        </a>
+                    </li>
+                    <li>
+                        <a class="waves-effect waves-light btn black green-text accent-4-text z-depth-5"
+                            href="{% url 'search_person' %}">
+                            Actors
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
+    <ul class="sidenav deep-orange darken-1" id="slide-out">
+        <li>
+            <a class="waves-effect waves-light btn black green-text accent-4-text z-depth-5" href="{% url 'index' %}">
+                Home
+            </a>
+        </li>
+        <li>
+            <a class="waves-effect waves-light btn black green-text accent-4-text z-depth-5"
+                href="{% url 'search_movies' %}">
+                Movies
+            </a>
+        </li>
+        <li>
+            <a class="waves-effect waves-light btn black green-text accent-4-text z-depth-5"
+                href="{% url 'search_tv' %}">
+                TV Shows
+            </a>
+        </li>
+        <li>
+            <a class="waves-effect waves-light btn black green-text accent-4-text z-depth-5"
+                href="{% url 'search_person' %}">
+                Actors
+            </a>
+        </li>
+    </ul>
+
     {% block content %}
 
     {% endblock %}
@@ -45,9 +86,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('.sidenav').sidenav();
+        });
+    </script>
 
     {% block script %}
 
