--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Showcase</title>
 </head>
@@ -50,7 +50,8 @@
             </div>
         </div>
     </nav>
-    <ul class="sidenav deep-orange darken-1" id="slide-out">
+
+    <ul class="sidenav blue-grey darken-3" id="slide-out">
         <li>
             <a class="waves-effect waves-light btn black green-text accent-4-text z-depth-5" href="{% url 'index' %}">
                 Home
@@ -80,12 +81,11 @@
 
     {% endblock %}
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
+    {% block script %}
+
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"
+        type="text/javascript"></script>
 
     <script>
         $(document).ready(function () {
@@ -93,9 +93,8 @@
         });
     </script>
 
-    {% block script %}
-
     {% endblock %}
+
 </body>
 
 </html>
