--- a/templates/main/search_movies.html
+++ b/templates/main/search_movies.html
@@ -2,29 +2,55 @@
 
 {% block content %}
 
-
 <form class="search-form" method="GET">
     <input class="search-form__query center" type="text" placeholder="Search...." name="Search">
 </form>
 
 
-{% if results %}
 
-{% for result in results.results %}
 
-<p>
-    {{ result }}
-</p>
-<img src="https://image.tmdb.org/t/p/w185{{ result.poster_path }}" alt="">
+<div class="container">
+    {% if results %}
+    <div class="row">
+        {% for result in results.results %}
+        <div class="col s12 m3 l3">
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="https://image.tmdb.org/t/p/w500{{ result.poster_path }}">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">{{ result.name }}<i
+                            class=" material-icons right">more_vert</i></span>
+                    <p>
+                        <a href="{% url 'details_movies' result.id %}"
+                            class="waves-effect waves-light btn black green-text accent-4-text z-depth-5">
+                            View Details
+                        </a>
+                    </p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">{{ result.name }}<i
+                            class="material-icons right">close</i></span>
+                    <h6>Released:
+                        <br>{{ result.release_date }}
+                    </h6>
+                    <p>Average: {{ result.vote_average }} </p>
+                    <p>"{{ result.overview }}"</p>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 
-{% endfor %}
+    {% else %}
 
-{% else %}
+    <h1 class="center">
+        Welcome to Showcase Movie Search....
+    </h1>
 
-<h1 class="center">
-    Welcome to Showcase Movie Search....
-</h1>
+    {% endif %}
+</div>
 
-{% endif %}
+
 
 {% endblock %}
