--- a/templates/main/search_person.html
+++ b/templates/main/search_person.html
@@ -10,14 +10,43 @@
 
 {% if results %}
 
-{% for result in results.results %}
-
-<p>
-    {{ result }}
-</p>
-<img src="https://image.tmdb.org/t/p/w185{{ result.profile_path }}" alt="">
-
-{% endfor %}
+<div class="container">
+    <div class="row">
+        {% for result in results.results %}
+        <div class="col s12 m3 l3">
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    {% if result.profile_path %}
+                    <img class="activator" src="https://image.tmdb.org/t/p/w500{{ result.profile_path }}">
+                    {% else %}
+                    <img class="activator" src="https://dummyimage.com/600x900/ababab/ffffff.png&text=+Poster">
+                    {% endif %}
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">{{ result.name }}<i
+                            class=" material-icons right">more_vert</i></span>
+                    <p><a href="{% url 'details_person' result.id %}"
+                            class="waves-effect waves-light btn black green-text accent-4-text small z-depth-5">
+                            View Details
+                        </a>
+                    </p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">{{ result.name }}<i
+                            class="material-icons right">close</i></span>
+                    <h6>Known For:
+                        {% for known_for in result.known_for %}
+                        <li>
+                            {{ known_for.title }}
+                        </li>
+                        {% endfor %}
+                    </h6>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 
 {% else %}
 
