--- a/templates/main/details_movies.html
+++ b/templates/main/details_movies.html
@@ -38,16 +38,16 @@
                 {% if result.type == "Trailer" %}
                 <p>{{ result.name }}</p>
                 <div class="video-container">
-                    <iframe width="853" height="480" src="//www.youtube.com/embed/{{ result.key }}?rel=0" frameborder="0"
-                        allowfullscreen></iframe>
+                    <iframe width="853" height="480" src="//www.youtube.com/embed/{{ result.key }}?rel=0"
+                        frameborder="0" allowfullscreen></iframe>
                 </div>
                 {% endif %}
-               
+
                 {% if result.type == "Teaser" %}
                 <p>{{ result.name }}</p>
                 <div class="video-container">
-                    <iframe width="853" height="480" src="//www.youtube.com/embed/{{ result.key }}?rel=0" frameborder="0"
-                        allowfullscreen></iframe>
+                    <iframe width="853" height="480" src="//www.youtube.com/embed/{{ result.key }}?rel=0"
+                        frameborder="0" allowfullscreen></iframe>
                 </div>
                 {% endif %}
                 {% endfor %}
@@ -101,7 +101,9 @@
             <div class="card">
 
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img src="https://image.tmdb.org/t/p/original{{ result.poster_path }}">
+                    <a href="{% url 'details_movies' result.id %}">
+                        <img src="https://image.tmdb.org/t/p/original{{ result.poster_path }}">
+                    </a>
                 </div>
 
                 <div class="card-content">
