--- a/templates/main/details_tv.html
+++ b/templates/main/details_tv.html
@@ -51,16 +51,16 @@
                 {% if result.type == "Trailer" %}
                 <p>{{ result.name }}</p>
                 <div class="video-container">
-                    <iframe width="853" height="480" src="//www.youtube.com/embed/{{ result.key }}?rel=0" frameborder="0"
-                        allowfullscreen></iframe>
+                    <iframe width="853" height="480" src="//www.youtube.com/embed/{{ result.key }}?rel=0"
+                        frameborder="0" allowfullscreen></iframe>
                 </div>
                 {% endif %}
-               
+
                 {% if result.type == "Teaser" %}
                 <p>{{ result.name }}</p>
                 <div class="video-container">
-                    <iframe width="853" height="480" src="//www.youtube.com/embed/{{ result.key }}?rel=0" frameborder="0"
-                        allowfullscreen></iframe>
+                    <iframe width="853" height="480" src="//www.youtube.com/embed/{{ result.key }}?rel=0"
+                        frameborder="0" allowfullscreen></iframe>
                 </div>
                 {% endif %}
                 {% endfor %}
@@ -77,7 +77,8 @@
                     href=" {{ results.homepage }} ">OFFICIAL WEBSITE</a>
             </div>
             <div class="card-content blue-grey darken-3 white-text">
-                <span class="card-title">{{ results.original_name }}, {{ results.first_air_date }} to {{ results.last_air_date }}</span>
+                <span class="card-title">{{ results.original_name }}, {{ results.first_air_date }} to
+                    {{ results.last_air_date }}</span>
                 <p>{{ results.overview }}</p>
 
                 <div class="row">
@@ -114,7 +115,9 @@
             <div class="card">
 
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img src="https://image.tmdb.org/t/p/original{{ result.poster_path }}">
+                    <a href="{% url 'details_tv' result.id %}">
+                        <img src="https://image.tmdb.org/t/p/original{{ result.poster_path }}">
+                    </a>
                 </div>
 
                 <div class="card-content">
