--- a/templates/main/details_tv.html
+++ b/templates/main/details_tv.html
@@ -149,4 +149,10 @@
     });
 </script>
 
+<script>
+    $(document).ready(function () {
+        $('.sidenav').sidenav();
+    });
+</script>
+
 {% endblock %}
