--- a/templates/main/details_movies.html
+++ b/templates/main/details_movies.html
@@ -135,4 +135,10 @@
     });
 </script>
 
+<script>
+    $(document).ready(function () {
+        $('.sidenav').sidenav();
+    });
+</script>
+
 {% endblock %}
