--- a/templates/main/details_person.html
+++ b/templates/main/details_person.html
@@ -77,4 +77,10 @@
     });
 </script>
 
+<script>
+    $(document).ready(function () {
+        $('.sidenav').sidenav();
+    });
+</script>
+
 {% endblock %}
